argocd/applications/forgejo/server-upgrade-quiesce.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  annotations:
    argocd.argoproj.io/sync-wave: '-20'
spec:
  replicas: 0
