argocd/applications/forgejo/ingressroute-forgejo-k8s-private.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-private
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`forgejo.k8s.proompteng.ai`)
      services:
        - name: forgejo-http
          port: 3000
  tls:
    secretName: wildcard-k8s-proompteng-ai-tls
